--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -12,22 +12,22 @@
     </div>
     <md-card-subtitle>
 
-      <app-text-input #job [editMode]="editMode" [type]="'text'" [text]="aboutUser.job" [placeholder]="'Job'" [maxlength]="20" (value)="job" (notify)="updateJob($event)" (enter)="submit()"></app-text-input>
+      <app-text-input #job [editMode]="editMode" [type]="'text'" [text]="aboutUser.job" [placeholder]="'Job'" [maxlength]="20" (value)="job" (notify)="updateUserProperties('job', $event)" (enter)="submit()"></app-text-input>
       <span *ngIf="aboutUser.company"> @ </span>
-      <app-text-input #company [editMode]="editMode" [type]="'text'" [text]="aboutUser.company" [placeholder]="'Company'" [maxlength]="20" (value)="company" (notify)="updateCompany($event)" (enter)="submit()"></app-text-input>
+      <app-text-input #company [editMode]="editMode" [type]="'text'" [text]="aboutUser.company" [placeholder]="'Company'" [maxlength]="20" (value)="company" (notify)="updateUserProperties('company', $event)" (enter)="submit()"></app-text-input>
 
     </md-card-subtitle>
   </md-card-header>
 
   <md-card-content>
-    <div fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="space-between center">
-      <div>
+    <div fxLayout="row" fxLayoutGap="10px">
+      <div fxFlex>
         <span *ngIf="editMode === false">Bio:</span>
         <p *ngIf="aboutUser.bio" class="bio">
-          <app-text-input #bio [editMode]="editMode" [type]="'textarea'" [text]="aboutUser.bio" [placeholder]="'Bio'" [maxlength]="200" (value)="bio" (notify)="updateBio($event)" (enter)="submit()"></app-text-input>
+          <app-text-input #bio [editMode]="editMode" [type]="'textarea'" [text]="aboutUser.bio" [placeholder]="'Bio'" [maxlength]="200" (value)="bio" (notify)="updateUserProperties('bio', $event)" (enter)="submit()"></app-text-input>
         </p>
         <p *ngIf="!aboutUser.bio">
-          <app-text-input #bio [editMode]="editMode" [type]="'textarea'" [text]="aboutUser.fname + ' has not entered a bio yet :('" [placeholder]="'Bio'" [maxlength]="200" (value)="bio" (notify)="updateBio($event)" (enter)="submit()"> </app-text-input>
+          <app-text-input #bio [editMode]="editMode" [type]="'textarea'" [text]="aboutUser.fname + ' has not entered a bio yet :('" [placeholder]="'Bio'" [maxlength]="200" (value)="bio" (notify)="updateUserProperties('bio', $event)" (enter)="submit()"> </app-text-input>
         </p>
       </div>
 
@@ -40,12 +40,15 @@
   <md-card-actions>
 
     <div fxLayout="row" fxLayoutAlign="space-around center">
-      <a *ngIf="aboutUser.instagram" href="https://www.instagram.com/{{aboutUser.instagram}}"><button md-icon-button><i class="mdi mdi-24px mdi-instagram icon"></i></button></a>
-      <a *ngIf="aboutUser.facebook" href="https://www.facebook.com/{{aboutUser.facebook}}"><button md-icon-button><i class="mdi mdi-24px mdi-facebook-box icon"></i></button></a>
-      <a *ngIf="aboutUser.youtube" href="https://www.youtube.com/{{aboutUser.youtube}}"> <button md-icon-button><i class="mdi mdi-24px mdi-youtube-play icon"></i></button></a>
-      <a *ngIf="aboutUser.twitter" href="https://twitter.com/{{aboutUser.twitter}}"><button md-icon-button><i class="mdi mdi-24px mdi-twitter-box icon"></i></button></a>
-      <a *ngIf="aboutUser.twitch" href="https://www.twitch.tv/{{aboutUser.twitch}}"><button md-icon-button><i class="mdi mdi-24px mdi-twitch icon"></i></button></a>
-      <a *ngIf="aboutUser.linkedin" href="https://www.linkedin.com/in/{{aboutUser.linkedin}}"> <button md-icon-button><i class="mdi mdi-24px mdi-linkedin-box icon"></i></button></a>
+      <app-social-link [editMode]="editMode" type="instagram" [link]="aboutUser.instagram" (notify)="updateUserProperties('instagram', $event)"></app-social-link>
+      <app-social-link [editMode]="editMode" type="facebook" [link]="aboutUser.facebook" (notify)="updateUserProperties('facebook', $event)"></app-social-link>
+      <app-social-link [editMode]="editMode" type="youtube" [link]="aboutUser.youtube" (notify)="updateUserProperties('youtube', $event)"></app-social-link>
+      <app-social-link [editMode]="editMode" type="twitter" [link]="aboutUser.twitter" (notify)="updateUserProperties('twitter', $event)"></app-social-link>
+      <app-social-link [editMode]="editMode" type="twitch" [link]="aboutUser.twitch" (notify)="updateUserProperties('twitch', $event)"></app-social-link>
+      <app-social-link [editMode]="editMode" type="linkedin" [link]="aboutUser.linkedin" (notify)="updateUserProperties('linkedin', $event)"></app-social-link>
+    </div>
+    <div *ngIf="editMode === true">
+      Click to add or edit social links
     </div>
   </md-card-actions>
 </md-card>
