--- a/src/app/components/editable/social-link/social-link.component.html
+++ b/src/app/components/editable/social-link/social-link.component.html
@@ -8,11 +8,11 @@
 
   <md-menu #edit="mdMenu">
     <div (click)="$event.stopPropagation()" fxLayout="row" class="inputMenuItem">
-      <md-input-container>
+      <md-input-container [ngClass]="{'smallInput': mediaAlias === 'xs'}">
         <input #input mdInput placeholder="{{href.substring(0, href.lastIndexOf('/') + 1)}}" (click)="$event.stopPropagation()" [ngModel]="link" (ngModelChange)="onInput($event)" (keyup.enter)="onEnter()"  [attr.maxlength]="48" type="text">
         <md-hint align="end">{{input.value.length}} / {{input.maxLength}}</md-hint>
       </md-input-container>
-      <button md-button md-tooltip="Confirm" [mdTooltipShowDelay]="500" (click)="onEnter()" class="check">
+      <button md-button md-tooltip="Confirm" [ngClass]="{'smallButton': mediaAlias === 'xs'}" [mdTooltipShowDelay]="500" (click)="onEnter()" class="check">
         <md-icon>check</md-icon>
       </button>
     </div>
